[package]
name = "proc-macro-srv-cli"
version = "0.0.0"
repository.workspace = true
description = "A standalone binary for the `proc-macro-srv` crate of rust-analyzer."

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
proc-macro-srv.workspace = true
proc-macro-api.workspace = true
tt.workspace = true
crossbeam-channel = "0.5.13"
postcard = "*"

[features]
sysroot-abi = ["proc-macro-srv/sysroot-abi"]
in-rust-tree = ["proc-macro-srv/in-rust-tree", "sysroot-abi"]
ng = []
default = ["ng"]


[[bin]]
name = "rust-analyzer-proc-macro-srv"
path = "src/main.rs"

[lints]
workspace = true
